= {project-name} Changelog
:project-name: malboxes
:uri-repo: https://github.com/GoSecure/malboxes
:uri-issue: {uri-repo}/issues/

This document provides a high-level view of the changes introduced in {project-name} by release.
For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.

== <next release>

Bug fixes::
  * Removed APM from default chocolatey packages ({uri-issue}119[#119])
  * Disabled malware protection, cloud and automatic sample submission on Windows 10 ({uri-issue}120[#120])

Infrastructure Improvements::
* Various Jenkins CI system improvements ({uri-issue}108[#108], {uri-issue}110[#110], {uri-issue}123[#123], {uri-issue}124[#124])


== 0.4.0

SecTor 2018 Edition!

Enhancements::
* Experimental profiles feature gained shortcut creation support.
  See `profile-example.js` for syntax. ({uri-issue}85[#85])
* Experimental profiles registry changes now happen after package installation.
  This enables registry changes to alter program configuration. ({uri-issue}86[#86])
* Experimental profiles registry changes now create missing registry paths by default ({uri-issue}84[#84])
* Added configuration parameters for keyboard locale and proxy settings ({uri-issue}72[#72], {uri-issue}78[#78])
* build: New command-line argument to override default configuration file (-c or --config)
* Chocolatey will force the proxy configuration if set ({uri-issue}74[#74])
* Custom provisioners can be defined in profiles configuration ({uri-issue}73[#73])
* `PACKER_CACHE_DIR` environment variable will be honored if present ({uri-issue}99[#99], {uri-issue}100[#100])
* On debug, Malboxes will output the temporary packer config created ({uri-issue}75[#75], {uri-issue}102[#102])
* Removed `fiddler4` and `processhacker` chocolatey package ({uri-issue}89[#89], {uri-issue}94[#94])
* Tolerate chocolatey package install failures caused by failed downloads ({uri-issue}107[#107])