@@ -8,6 +8,7 @@
 			{% endif %}
 			"{{ dir }}/scripts/windows/installtools.ps1",
 			{% if profile is defined %}"{{ cache_dir }}/profile-{{ profile }}.ps1",{% endif %}
+			"{{ dir }}/scripts/windows/uac.ps1",
 			"{{ dir }}/scripts/windows/malware_analysis.ps1"
 		]
 	}
